<resources>
    <string name="app_name">Labs20231-Gr03</string>
    <string name="titulo_contact_information_activity" translatable="false">contact information</string>
    <string name="titulo_informacion_personal_activity">Personal information</string>
    <string name="nombres">Names</string>
    <string name="sexo">Sex:</string>
    <string name="mujer">Women</string>
    <string name="hombre">Man</string>
    <string name="apellidos">Last name</string>
    <string name="siguiente">Next</string>
    <string name="fecha_de_nacimiento">Birthdate</string>
    <string-array name="grados_escolaridad">
        <item>School grade</item>
        <item>Primary</item>
        <item>Secondary</item>
        <item>University</item>
        <item>Other</item>
    </string-array>
    <string name="Pais">Country*</string>
    <string name="Ciudad">City</string>
    <string name="Telefono">Phone*</string>
    <string name="email">Email*</string>
    <string name="direccion">Address</string>

    <string-array name="paises">
        <item>Argentina</item>
        <item>Bolivia</item>
        <item>Brasil</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Cuba</item>
        <item>Dominicana, República</item>
        <item>Ecuador</item>
        <item>El Salvador</item>
        <item>Guatemala</item>
        <item>Haití</item>
        <item>Honduras</item>
        <item>Jamaica</item>
        <item>México</item>
        <item>Nicaragua</item>
        <item>Panamá</item>
        <item>Paraguay</item>
        <item>Perú</item>
        <item>Puerto Rico</item>
        <item>Uruguay</item>
        <item>Venezuela</item>
    </string-array>
    <string-array name="ciudades_colombia">
        <item>Bogotá</item>
        <item>Medellín</item>
        <item>Cali</item>
        <item>Barranquilla</item>
        <item>Cartagena</item>
        <item>Cúcuta</item>
        <item>Bucaramanga</item>
        <item>Ibagué</item>
        <item>Pereira</item>
        <item>Manizales</item>
        <item>Armenia</item>
        <item>Villavicencio</item>
        <item>Neiva</item>
        <item>Sincelejo</item>
        <item>Pasto</item>
        <item>Popayán</item>
        <item>Valledupar</item>
        <item>Riohacha</item>
        <item>Tunja</item>
        <item>Florencia</item>
        <item>Quibdó</item>
        <item>Mocoa</item>
        <item>Puerto Carreño</item>
        <item>Puerto Inírida</item>
        <item>San Andrés</item>
        <item>San José del Guaviare</item>
        <item>Mitú</item>
        <item>Leticia</item>
    </string-array>
</resources>